--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     </head>
     
 <body >
-<img src="1.png" alt="ñêðèíøîò" >
+<img src="1.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
 <br>
-<img src="2.png" alt="ñêðèíøîò" >
+<img src="2.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
 <br>
-<img src="3.png" alt="ñêðèíøîò" >
+<img src="3.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
 <br>
-<img src="4.png" alt="ñêðèíøîò" >
+<img src="4.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
 <br>
-<img src="5.png" alt="ñêðèíøîò" >
+<img src="5.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
+    <br>
+<img src="6.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
+<br>
+<img src="7.png" alt="Ã±ÃªÃ°Ã¨Ã­Ã¸Ã®Ã²" >
 </body>
 </html>
